test/lit/pto/subview_validshape_partial_parent_requires_explicit.pto
// RUN: ptoas %s 2>&1 | FileCheck %s

module {
  func.func @subview_implicit_valid_partial_parent_allowed(
      %dst: memref<2x8xf32, #pto.address_space<gm>>) {
    %c2 = arith.constant 2 : index
    %c8 = arith.constant 8 : index
    %tile = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=4, cols=16, v_row=3, v_col=15, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %s = pto.subview %tile[%c2, %c8] sizes [2, 8] :
      !pto.tile_buf<loc=vec, dtype=f32, rows=4, cols=16, v_row=3, v_col=15, blayout=row_major, slayout=none_box, fractal=512, pad=0>
      -> !pto.tile_buf<loc=vec, dtype=f32, rows=2, cols=8, v_row=2, v_col=8, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.tstore ins(%s : !pto.tile_buf<loc=vec, dtype=f32, rows=2, cols=8, v_row=2, v_col=8, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
              outs(%dst : memref<2x8xf32, #pto.address_space<gm>>)
    return
  }
}

// CHECK: Tile<TileType::Vec, float, 4, 16, BLayout::RowMajor, 2, 8, SLayout::NoneBox, 512, PadValue::Null, CompactMode::Null>
// CHECK-NOT: error:
